--- a/MP1/index.html
+++ b/MP1/index.html
@@ -112,7 +112,7 @@
     <div class="col-md-4" data-aos="fade-up" data-aos-delay="300">
       <div class="service p-4 bg-base rounded-3 shadow-effect">
         <div class="iconbox rounded-3">
-          <i class="las la-tools"></i>
+          <i class="lab la-python"></i>
   </div>
       <h4 class="mt-4 mb-2">Python Developement</h4>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod</p>
@@ -126,6 +126,31 @@
 
   </section>
   <!-- services -->
+
+  <!-- WORK -->
+  <section id="work" class="full-height px-lg-5">
+      <div class="container">
+
+        <div class="row pb-4" data-aos="fade-up">
+          <div class="col-lg-8">
+  
+            <h6 class="text-brand">Work</h6>
+            <h1>My recent projects</h1>
+  
+          </div>
+        </div>
+        <div class="row"></div>
+          <div class="col lg-4">
+            <div class="card-custom">
+              <div class="card-image"></div>
+              <img src="">
+            </div>
+          </div>
+      </div>
+
+  </section>
+
+  <!-- work -->
 
  </div>
 
