--- a/index.html
+++ b/index.html
@@ -143,7 +143,23 @@
           <div class="col lg-6">
             <div class="card-custom rounded-4">
               <div class="card-image rounded-4"></div>
-              <img class="rounded-4" src="./Assets/images/python2.jpg">
+              <img class="rounded-4" src="./Assets/images/project1.jpg">
+            </div>
+          </div>
+
+          <div class="row"></div>
+          <div class="col lg-6">
+            <div class="card-custom rounded-4">
+              <div class="card-image rounded-4"></div>
+              <img class="rounded-4" src="./Assets/images/project1.jpg">
+            </div>
+          </div>
+
+          <div class="row"></div>
+          <div class="col lg-6">
+            <div class="card-custom rounded-4">
+              <div class="card-image rounded-4"></div>
+              <img class="rounded-4" src="./Assets/images/project1.jpg">
             </div>
           </div>
       </div>
