--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <a class="nav-link" href="#others">Others</a>
 </li>
 <li class="nav-item">
-    <a class="nav-link" href="Contact">Contact</a>
+    <a class="nav-link" href="#Contact">Contact</a>
 </li>
           
         </ul>
@@ -160,6 +160,8 @@
             <div class="card-custom rounded-4">
               <div class="card-image rounded-4"></div>
               <img class="rounded-4" src="./Assets/images/project1.jpg">
+              <img class="rounded-4" src="./Assets/images/project1.jpg">
+              <img class="rounded-4" src="./Assets/images/project1.jpg">
             </div>
           </div>
       </div>
@@ -169,6 +171,55 @@
   <!-- work -->
 
  </div>
+ <!-- Contact -->
+ <section id="work" class="full-height px-lg-5">
+  <div class="container">
+
+    <div class="row justify-content-center text-center" data-aos="fade-up">
+      <div class="col-lg-8">
+
+    <div>
+      <h2 class="text-center mb-5 shadow-sm p-3">Contact Me:</h2>
+    </div>
+    <div class="row pb-4">
+      <div class="col-md-7 shadow rounded p-5">
+        <div class="row">
+          <div class="col mb-3">
+            <label class="form-label">First Name</label>
+            <input type="text" class="form-control" placeholder="First Name">
+          </div>
+          <div class="col mb-3">
+            <label class="form-label">Last Name</label>
+            <input type="text" class="form-control" placeholder="Last Name">
+          </div>
+        </div>
+        <div class="mb-3">
+          <div class="col mb-3">
+            <label class="form-label">Email:</label>
+            <input type="text" class="form-control" placeholder="name@email.com">
+          </div>
+
+          <div class="col mb-3">
+            <label class="form-label">Subject:</label>
+            <input type="text" class="form-control" placeholder="Subject">
+          </div>
+
+          <div class="col mb-3">
+            <label class="form-label">Message:</label>
+            <textarea name="" class="form-control" placeholder="Write your message here:" rows="3"></textarea>
+          </div>
+
+        </div>
+      </div>
+      <div class="col-md-5">
+        <div class="ml-5">
+        <img src="./Assets/images/mail4.jpeg" alt="">
+      </div>
+    </div>
+  </div>
+</div>
+ </section>
+ <!-- /contact -->
 
  <!-- //CONTENT -->
 
