--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
      </div>
 
       <div class="row gy-5">
-        <div class="col-md-4">
+        <div class="col-md-4"data-aos="fade-up" data-aos-delay="600" >
           <div class="card-custom rounded-4 bg-base shadow-effect h-100">
             <div class="card-custom-image rounded-4">
               <img class="rounded-4" src="./Assets/images/project1.jpg" alt="">
@@ -163,7 +163,7 @@
           </div>
         </div>
 
-        <div class="col-md-4">
+        <div class="col-md-4" data-aos="fade-up" data-aos-delay="300" >
           <div class="card-custom rounded-4 bg-base shadow-effect h-100">
             <div class="card-custom-image rounded-4">
               <img class="rounded-4" src="./Assets/images/news1.jpg" alt="">
@@ -176,7 +176,7 @@
           </div>
         </div>
 
-        <div class="col-md-4">
+        <div class="col-md-4"data-aos="fade-up" data-aos-delay="600" >
           <div class="card-custom rounded-4 bg-base shadow-effect h-100">
             <div class="card-custom-image rounded-4">
               <img class="rounded-4" src="./Assets/images/biodata.jpg" alt="">
@@ -189,7 +189,7 @@
           </div>
         </div>
 
-        <div class="col-md-4">
+        <div class="col-md-4" data-aos="fade-up" data-aos-delay="600" >
           <div class="card-custom rounded-4 bg-base shadow-effect h-100">
             <div class="card-custom-image rounded-4">
               <img class="rounded-4" src="./Assets/images/Forms.jpg" alt="">
@@ -202,7 +202,7 @@
           </div>
         </div>
 
-        <div class="col-md-4">
+        <div class="col-md-4" data-aos="fade-up" data-aos-delay="300" >
           <div class="card-custom rounded-4 bg-base shadow- h-100">
             <div class="card-custom-image rounded-4">
               <img class="rounded-4" src="./Assets/images/project1.jpg" alt="">
@@ -215,7 +215,7 @@
           </div>
         </div>
 
-        <div class="col-md-4">
+        <div class="col-md-4" data-aos="fade-up" data-aos-delay="600" >
           <div class="card-custom rounded-4 bg-base shadow-effect h-100">
             <div class="card-custom-image rounded-4">
               <img class="rounded-4" src="./Assets/images/project1.jpg" alt="">
