--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 
     <!-- <div class="row justify-content-center text-center" data-aos="fade-up">
       <div class="col-lg-8 pb-4"> -->
-      <h1 class="contactMe">Let's talk:
+      <h1 class="contactMe">
       </h1>
     <div class="box">
       <div class="contact form">
@@ -305,7 +305,7 @@
             <a href="tel:+1233455677">+1233455677</a>
           </div>
 <!-- links -->
-          <ul>
+          <ul class="sci">
             <li><a href="#"><i class="lab la-facebook"></i></a></li>
             <li><a href="#"><i class="lab la-linkedin"></i></a></li>
             <li><a href="#"><i class="lab la-facebook-messenger"></i></a></li>
@@ -314,7 +314,9 @@
         </div>
       </div>
       
-      <div class="contact map"></div>
+      <div class="contact map">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d62076.29325790327!2d123.32848479080381!3d13.48836828738796!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x33a19742f96af201%3A0x2e72c636f035e064!2sBaao%2C%20Camarines%20Sur!5e0!3m2!1sen!2sph!4v1676634538899!5m2!1sen!2sph" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
     </div>
 
   </section>
