--- a/index.html
+++ b/index.html
@@ -317,13 +317,14 @@
     
     <script>
 AOS.init();
-
-let popup = document.getElementById("popup");
+    </script>
+    <script>
+      let popup = document.getElementById("popup");
 function openPopup(){
-  popup.classList.add(".openPopup")
+  popup.classList.add(".open-Popup")
 }
 function closePopup(){
-  popup.classList.remove(".openPopup")
+  popup.classList.remove(".open-Popup")
 }
     </script>
     
