--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           <h1 class="display-4 fw-bold" data-aos="fade-up">I'm a <span class="text-brand">Full-stack Developer</span></h1>
           <p class="lead mt-2 mb-4" data-aos="fade-up" data-aos-delay="300"><span style="color: white">Welcome to my profile! Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do  quis nostrud exercitation ullamco </span></p>
           <div data-aos="fade-up" data-aos-delay="300">
-            <a href="#work" class="btn btn-brand me-3">Feel free to explore</a>
+            <a href="#work" class="btn btn-brand me-3">Explore my work</a>
           <a href="#" class="link-custom">Call:+639357280802</a>
           
           </div>
@@ -198,7 +198,7 @@
 
     <!-- <div class="row justify-content-center text-center" data-aos="fade-up">
       <div class="col-lg-8 pb-4"> -->
-        <div class="row pb-4" data-aos="fade-up">
+        <div class="row pb-4" data-aos="fade-up" data-aos-delay="600">
           <div class="col-lg-10">
   
             <h6 class="text-brand">Contact</h6>
@@ -206,9 +206,9 @@
   
           </div>
         </div>
-      <h1 class="contactMe">
+      <h1 class="contactMe" >
       </h1>
-    <div class="box">
+    <div class="box" data-aos="zoom-in-up" data-aos-delay="200">
       <div class="contact form">
       <h4>Send a message</h4>
       <form action="">
@@ -229,7 +229,7 @@
             <div class="row50">
             <div class="inputBox">
               <span>Email:</span>
-              <input type="text" placeholder="@gmail.com">
+              <input type="text" placeholder="name@email.com">
             </div>
 
             <div class="inputBox">
